test/scc/pp/errors/038.a
038.t:2:2: error: unterminated #ifdef